WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119501
Editor::updateMarkersForWordsAffectedByEditing(bool) shouldn't compute start and end of words when there are nor markers
https://bugs.webkit.org/show_bug.cgi?id=119501
Summary
Editor::updateMarkersForWordsAffectedByEditing(bool) shouldn't compute start ...
Ryosuke Niwa
Reported
2013-08-05 16:51:57 PDT
setMarkedText is lower on ToT. To mitigate this, avoid computing the start and the end of words in Editor::updateMarkersForWordsAffectedByEditing(bool) when there are no document markers. <
rdar://problem/14439234
>
Attachments
Fixes the bug
(3.11 KB, patch)
2013-08-05 17:45 PDT
,
Ryosuke Niwa
enrica
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2013-08-05 17:45:56 PDT
Created
attachment 208161
[details]
Fixes the bug
Enrica Casucci
Comment 2
2013-08-05 18:59:52 PDT
Comment on
attachment 208161
[details]
Fixes the bug View in context:
https://bugs.webkit.org/attachment.cgi?id=208161&action=review
Yes!
> Source/WebCore/ChangeLog:3 > + Editor::updateMarkersForWordsAffectedByEditing(bool) shouldn't compute start and end of words when there are nor markers
typo: 'not'
Ryosuke Niwa
Comment 3
2013-08-05 19:00:45 PDT
Committed
r153734
: <
http://trac.webkit.org/changeset/153734
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug