Editor::updateMarkersForWordsAffectedByEditing(bool) shouldn't compute start and end of words when there are nor markers https://bugs.webkit.org/show_bug.cgi?id=119501

Reviewed by Enrica Casucci.

Exit early in updateMarkersForWordsAffectedByEditing before calling startOfWord and endOfWord if there are no document markers.

* dom/DocumentMarkerController.h:
(WebCore::DocumentMarkerController::hasMarkers): Added.
* editing/Editor.cpp:
(WebCore::Editor::updateMarkersForWordsAffectedByEditing):


Canonical link: https://commits.webkit.org/137451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153734 268f45cc-cd09-0410-ab3c-d52691b4dbfc